src/main/java/com/example/userbehaviormanagement/services/exceptions/errors/ValidationException.java
package com.example.userbehaviormanagement.services.exceptions.errors;

public class ValidationException extends RuntimeException {
    public ValidationException(String message) {
        super(message);
    }
}
